@@ -110,7 +110,7 @@ public class ProductPackage implements Comparable<ProductPackage> {
 
    @Override
    public int compareTo(ProductPackage arg0) {
-      return new Integer(id).compareTo(arg0.getId());
+      return Integer.valueOf(id).compareTo(arg0.getId());
    }
 
    /**
