@@ -138,7 +138,7 @@ public class ProductPackageClientLiveTest extends BaseSoftLayerClientLiveTest {
       Map<Float, ProductItem> ramToProductItem = Maps.uniqueIndex(ramItems, ProductItems.capacity());
 
       ProductItemPrice price = ProductItems.price().apply(ramToProductItem.get(1.0f));
-      assert new Integer(1644).equals(price.getId());
+      assert Integer.valueOf(1644).equals(price.getId());
    }
 
    @Test
@@ -153,7 +153,7 @@ public class ProductPackageClientLiveTest extends BaseSoftLayerClientLiveTest {
       Map<Float, ProductItem> coresToProductItem = Maps.uniqueIndex(cpuItems, ProductItems.capacity());
 
       ProductItemPrice price = ProductItems.price().apply(coresToProductItem.get(2.0f));
-      assert new Integer(1963).equals(price.getId());
+      assert Integer.valueOf(1963).equals(price.getId());
    }
 
    @Test
@@ -165,7 +165,7 @@ public class ProductPackageClientLiveTest extends BaseSoftLayerClientLiveTest {
 
       ProductItemPrice price = ProductItems.price().apply(
             osToProductItem.get("Ubuntu Linux 8 LTS Hardy Heron - Minimal Install (64 bit)"));
-      assert new Integer(1693).equals(price.getId());
+      assert Integer.valueOf(1693).equals(price.getId());
    }
 
    private void checkProductItem(ProductItem item) {
